add palm support

--- a/src/LLMP.Desktop/App.config
+++ b/src/LLMP.Desktop/App.config
@@ -3,6 +3,6 @@
 	<appSettings>
 		<add key="OpenAIKey" value="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"/>
 		<add key="OpenAIOrg" value="org-m46V56Jp52g69q9c1h53fv1o"/>
-		<add key="PalmKey" value="COM3"/>
+		<add key="PalmKey" value="AIzaSyBckgGXO_DcMSmoRnE7UHGTKvfO7GuDU_8"/>
 	</appSettings>
 </configuration>
