--- a/src/LLMP.Desktop/LLMP.Desktop.csproj
+++ b/src/LLMP.Desktop/LLMP.Desktop.csproj
@@ -14,6 +14,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.SemanticKernel.Plugins.Memory" Version="1.4.0-alpha" />
+		<PackageReference Include="Microsoft.SemanticKernel.Plugins.Web" Version="1.4.0-alpha" />
 		<PackageReference Include="SkiaSharp" Version="2.88.7" />
 		<PackageReference Include="Azure.Storage.Blobs" Version="12.19.1" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebView.WindowsForms" Version="8.0.7" />
