--- a/src/LLMP.Desktop/App.config
+++ b/src/LLMP.Desktop/App.config
@@ -1,8 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
-		<add key="OpenAIKey" value="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"/>
-		<add key="OpenAIOrg" value="org-m46V56Jp52g69q9c1h53fv1o"/>
-		<add key="PalmKey" value="AIzaSyBckgGXO_DcMSmoRnE7UHGTKvfO7GuDU_8"/>
+		<add key="OpenAIKey" value="sk-xxxxx"/>
+		<add key="OpenAIOrg" value="org-xxxxxx"/>
+		<add key="PalmKey" value=""/> <!---gemini api key ->-->		
+		<add key="BlobPrefix" value="https://[blob-account].blob.core.windows.net/XXX/"/> <!---Azure blob url prefix->-->
+		<add key="BlobConn" value="DefaultEndpointsProtocol=https;AccountName=...;EndpointSuffix=core.windows.net"/> <!---Azure blob connection->-->
+		<add key="ContainerName" value="XXX"/> <!---Azure blob container name->-->
+		<add key="GoogleSearchKey" value="AI...."/> <!---Azure blob container name->-->
+		<add key="GoogleSearchID" value="..."/> <!---Azure blob container name->-->		
 	</appSettings>
 </configuration>
