add gemini pro vision

--- a/src/LLMP.Desktop/App.config
+++ b/src/LLMP.Desktop/App.config
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
-		<add key="OpenAIKey" value="sk-xxxxx"/>
-		<add key="OpenAIOrg" value="org-xxxxxx"/>
-		<add key="PalmKey" value=""/> <!---gemini api key ->-->		
-		<add key="BlobPrefix" value="https://[blob-account].blob.core.windows.net/XXX/"/> <!---Azure blob url prefix->-->
-		<add key="BlobConn" value="DefaultEndpointsProtocol=https;AccountName=...;EndpointSuffix=core.windows.net"/> <!---Azure blob connection->-->
-		<add key="ContainerName" value="XXX"/> <!---Azure blob container name->-->
-		<add key="GoogleSearchKey" value="AI...."/> <!---Azure blob container name->-->
-		<add key="GoogleSearchID" value="..."/> <!---Azure blob container name->-->		
+		<add key="OpenAIKey" value="sk-XXXXX"/>
+		<add key="OpenAIOrg" value="org-XXXXXX"/>
+		<add key="PalmKey" value="AIXXXXX"/> <!---gemini api key ->-->		
+		<add key="BlobPrefix" value="https://XXXXX.blob.core.windows.net/XXXX/"/> <!---Azure blob url prefix->-->
+		<add key="BlobConn" value="DefaultEndpointsProtocol=https;AccountName=XXXXXXEndpointSuffix=core.windows.net"/> <!---Azure blob connection->-->
+		<add key="ContainerName" value="XXXXX"/> <!---Azure blob container name->-->
+		<add key="GoogleSearchKey" value="AIXXXXX"/> <!---Azure blob container name->-->
+		<add key="GoogleSearchID" value="XXXXXX"/> <!---Azure blob container name->-->		
 	</appSettings>
 </configuration>
