--- a/src/LLMP.Desktop/App.config
+++ b/src/LLMP.Desktop/App.config
@@ -7,7 +7,7 @@
 		<add key="BlobPrefix" value="https://XXXXX.blob.core.windows.net/XXXX/"/> <!---Azure blob url prefix->-->
 		<add key="BlobConn" value="DefaultEndpointsProtocol=https;AccountName=XXXXXXEndpointSuffix=core.windows.net"/> <!---Azure blob connection->-->
 		<add key="ContainerName" value="XXXXX"/> <!---Azure blob container name->-->
-		<add key="GoogleSearchKey" value="AIXXXXX"/> <!---Azure blob container name->-->
-		<add key="GoogleSearchID" value="XXXXXX"/> <!---Azure blob container name->-->		
+		<add key="GoogleSearchKey" value="AIXXXXX"/> <!---google search key ->-->
+		<add key="GoogleSearchID" value="XXXXXX"/> <!---google search id->-->		
 	</appSettings>
 </configuration>
