--- a/src/Connectors.AI.PaLM/Connectors.AI.PaLM.csproj
+++ b/src/Connectors.AI.PaLM/Connectors.AI.PaLM.csproj
@@ -18,6 +18,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Helper\FunctionDefinition.cs" />
+    <Compile Remove="PaLMPromptExecutionSettings.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.SemanticKernel" Version="1.4.0" />
     
   </ItemGroup>
