--- a/src/LLMP.Desktop/App.config
+++ b/src/LLMP.Desktop/App.config
@@ -1,13 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
-		<add key="OpenAIKey" value="sk-XXXXX"/>
-		<add key="OpenAIOrg" value="org-XXXXXX"/>
-		<add key="PalmKey" value="AIXXXXX"/> <!---gemini api key ->-->		
-		<add key="BlobPrefix" value="https://XXXXX.blob.core.windows.net/XXXX/"/> <!---Azure blob url prefix->-->
-		<add key="BlobConn" value="DefaultEndpointsProtocol=https;AccountName=XXXXXXEndpointSuffix=core.windows.net"/> <!---Azure blob connection->-->
-		<add key="ContainerName" value="XXXXX"/> <!---Azure blob container name->-->
-		<add key="GoogleSearchKey" value="AIXXXXX"/> <!---google search key ->-->
-		<add key="GoogleSearchID" value="XXXXXX"/> <!---google search id->-->		
+		<add key="OpenAIKey" value=""/>
+		<add key="OpenAIOrg" value=""/>
+		<add key="PalmKey" value=""/> <!---gemini api key ->-->		
+		<!--<add key="PalmKey" value=""/> --><!---gemini api key ->-->		
+		<add key="BlobPrefix" value="https://xxx.blob.core.windows.net/gambar/"/> <!---Azure blob url prefix->-->
+		<add key="BlobConn" value=""/> <!---Azure blob connection->-->
+		<add key="ContainerName" value="gambar"/> <!---Azure blob container name->-->
+		<add key="GoogleSearchKey" value=""/> <!---Azure blob container name->-->
+		<add key="GoogleSearchID" value=""/> <!---Azure blob container name->-->		
+		<add key="AzureSearchApiKey" value=""/> <!---Azure blob container name->-->		
+		<add key="AzureSearchEndpoint" value="https://xxx-search-ai.search.windows.net"/> <!---Azure blob container name->-->		
+		<add key="AzureFormApiKey" value=""/> <!---Azure blob container name->-->		
+		<add key="AzureFormEndpoint" value="https://xxx-cognitivesvc.cognitiveservices.azure.com/"/> <!---Azure blob container name->-->		
 	</appSettings>
 </configuration>
